# quizProject

./: db.sqlite3  manage.py  pyproject.toml
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
berebere/: asgi.py  settings.py  urls.py  wsgi.py
berebere/quiz/: admin.py  apps.py  models.py  serialz.py  urls.py  views.py
berebere/quiz/migrations/: 0001_initial.py  0002_rename_category_category_title.py
